--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 :root {
-  --background-color: #faf8ef;
+  --background-color: #FAF8D2;
   --primary-color: #776e65;
-  --grid-element-height: 3em;
-  --grid-element-width: 3em;
+  --grid-element-width: calc(100%/8);
+  --grid-element-height: 4em;
+}
+
+@media (max-width: 420px) {
+  :root {
+    --grid-element-height: 3em;
+  }
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   padding: 1em;
@@ -21,6 +28,10 @@ body {
   background-color: var(--background-color);
 }
 
+.App {
+  max-width: 50em;
+  margin: 0 auto;
+}
 .header {
   width: 100%;
   height: 50px;
@@ -68,4 +79,37 @@ body {
 }
 .grid-container .dog.down {
   transform: rotate(-90deg);
+}
+
+.scores {
+  display: flex;
+  justify-content: flex-end;
+}
+.score-container {
+  display: flex;
+  color: #fff;
+  border-radius: 4px;
+  margin: 0 0 1em 1em;
+  padding: 0.5em;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+}
+
+.score-container .score {
+  display: flex;
+  justify-content: center;
+}
+
+.description {
+  margin: 2em 0;
+}
+
+.description .text {
+  line-height: 1.5em;
+}
+.description .super-text {
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  font-weight: bold;
 }
