--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  --background-color: #FAF8D2;
+  --background-color: #faf8d2;
   --primary-color: #776e65;
-  --grid-element-width: calc(100%/8);
+  --grid-element-width: calc(100% / 8);
   --grid-element-height: 4em;
 }
 
@@ -19,8 +19,8 @@
 body {
   margin: 0;
   padding: 1em;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -31,7 +31,9 @@ body {
 .App {
   max-width: 50em;
   margin: 0 auto;
+  position: relative;
 }
+
 .header {
   width: 100%;
   height: 50px;
@@ -63,7 +65,8 @@ body {
   border: 2px solid var(--primary-color);
 }
 
-.grid-container .bone, .grid-container .dog {
+.grid-container .bone,
+.grid-container .dog {
   height: 2em;
   width: 2em;
 }
@@ -112,4 +115,42 @@ body {
   text-transform: uppercase;
   padding-bottom: 5px;
   font-weight: bold;
+}
+
+.game-over-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.game-over-container {
+  position: fixed;
+  height: 50vh;
+  width: 80vw;
+  top: 25%;
+  left: 10%;
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.game-over-container .close {
+  padding: 1em;
+  border-radius: 4px;
+  border: none;
+  background: #000;
+  color: #fff;
+}
+
+.game-over-container .score {
+  padding-top: 1em;
+  font-size: 25px;
+  text-align: center;
 }
